2 items in select

--- a/src/html/exchange/form.html
+++ b/src/html/exchange/form.html
@@ -8,14 +8,11 @@
       <div class="grid__col">
         <div class="form__item select-container select-container_violet-arrow">
           <select class="form__select select" name="state">
-            <option value="btc">
+            <option value="btc" selected>
               Bitcoin
             </option>
             <option value="eth">
               ETH
-            </option>
-            <option value="3">
-              Bitcoin
             </option>
           </select>
         </div>
