--- a/src/html/withdraw/withdraw-block.html
+++ b/src/html/withdraw/withdraw-block.html
@@ -7,14 +7,11 @@
       <div class="withdraw-block__mixed-item">
         <div class="select-container select-container_green-arrow">
           <select class="form__select select" name="state">
-            <option value="btc">
+            <option value="btc" selected>
               BTC
             </option>
             <option value="eth">
               ETH
-            </option>
-            <option value="3">
-              BTC
             </option>
           </select>
         </div>
