change get wallet to go wallet + add input type file

--- a/src/html/dashboard/block-docs.html
+++ b/src/html/dashboard/block-docs.html
@@ -2,12 +2,13 @@
   <header class="block__header block__header_big-padding-right">
     <h2 class="block__title">Documents</h2>
     <div class="block__actions">
-      <button class="block__add-btn">
+      <label for="add-doc" class="block__add-btn">
+        <input id="add-doc" type="file" />
         <span class="block__btn-icon">
           <img src="img/add-icon.svg" alt="Add document">
         </span>
         Add
-      </button>
+      </label>
     </div>
   </header>
   <div class="block__body">
