--- a/src/html/exchange/get-wallet.html
+++ b/src/html/exchange/get-wallet.html
@@ -1,17 +1,17 @@
 <div class="first-slide__link _popup-block-container">
   <button type="button" class="first-slide__button first-slide__button_relative first-slide__button_alt _open-popup-block">
-    Get Wallet
+    Go Wallet
   </button>
   <div class="popup-block get-wallet _popup-block">
     <div class="popup-block__title">
-      Get Wallet
+      Go Wallet
     </div>
     <form action="" class="form">
       <div class="form__item">
         <input type="mail" placeholder="Email" class="form__input">
       </div>
       <div class="popup-block__button popup-block__button_margin-bottom">
-        <button class="action-button">Get wallet</button>
+        <button class="action-button">Go Wallet</button>
       </div>
       <div class="form__accept">
         <label for="accept-1" class="form__label checkbox">
